Added handlers, auth controller, JWT implementation.

--- a/HolidayApi/appsettings.json
+++ b/HolidayApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "HolidayApi": "Server=(localdb)\\mssqllocaldb;Database=HolidayApiDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
