--- a/HolidayApi.DataAccess/HolidayApi.Infrastructure.csproj
+++ b/HolidayApi.DataAccess/HolidayApi.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\HolidayApi.Common\HolidayApi.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
